
Revision history for {{$dist->name}}

{{$NEXT}}
    [API Changes]
    - Syntax::Keyword::Match is now imported in Myriad::Service code
    - Redis: A service will not create another service's stream.

0.008     2021-06-18 05:24:31+00:00 UTC
    [API Changes]
    - Breaking: RPC client will unwrap the extra 'response' level from the response.
    - Myriad now has run_future like shutdown_future, to tell when the framework is running.
    - Test::Myriad has a ready sub, to tell when the underlying Myriad is running.
    - Batch will now throw an exception and fail if the developer didn't return arrayref.

    [Bugs fixed]
    - Having multiple RPC added will not block and wait each others from reading from stream.

0.007     2021-05-21 14:22:03+00:00 UTC
    [Bugs fixed]
    - RPC reading multiple items from stream but processing only one.

    [Dependencies]
    - Object::Pad - Use officially documented way to obtain metaclasses.

0.006     2021-05-07 04:16:11+00:00 UTC
    [API Changes]
    - `fmap_void`, `fmap_concat` and `fmap_scalar` are imported from Future::Utils into classes by default
    - RPC streams are now organized differently - there will be a stream for each method
    instead of one stream per service. To migrate, use the script in `bin/myriad-migrate-rpc-streams.pl`

    [Bugs fixed]
    - RPC reads no longer not block each other when multiple services have been loaded into one Myriad
    process

0.005     2021-04-30 12:52:41+00:00 UTC
    [Bugs fixed]
    - small memory leak due to defer blocks not being cleared up, now uses try/finally
    to avoid this
    - minor issues in command line parser for services' config
    - bootstrap test to be skipped if Linux::Inotify2 is not available

0.004     2021-04-28 13:27:36+08:00 Asia/Kuala_Lumpur
    [API Changes]
    - Helper methods from List::Util - `min`, `max` and `sum0` - plus JSON functions
    from JSON::MaybeUTF8 now injected into classes by default