@@ -5,6 +5,7 @@ Revision history for {{$dist->name}}
     [API Changes]
     - Syntax::Keyword::Match is now imported in Myriad::Service code
     - Redis: A service will not create another service's stream.
+    - Allow services namespaces by adding '::*' to the startup command.
 
 0.008     2021-06-18 05:24:31+00:00 UTC
     [API Changes]
